--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "element-ui": "^2.4.5",
+    "normalize.css": "^8.0.1",
     "tyelui": "^0.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
@@ -37,14 +38,21 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
+    "markdown-it-container": "^2.0.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-highlightjs": "^1.3.3",
+    "vue-loader": "^15.9.0",
+    "vue-markd-loader": "^1.1.0",
+    "vue-markdown": "^2.2.4",
+    "vue-markdown-loader": "^2.4.1",
     "vue-template-compiler": "^2.6.11",
-    "vuepress": "^1.3.1"
+    "vuepress": "^1.3.1",
+    "highlight.js": "^9.15.6",
+    "markdown-it": "^8.4.2"
   },
   "eslintConfig": {
     "root": true,
