--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-router": "^3.1.5"
   },
   "devDependencies": {
+    "@vue/component-compiler-utils": "^2.6.0",
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-plugin-router": "^4.2.0",
@@ -52,7 +53,10 @@
     "vue-template-compiler": "^2.6.11",
     "vuepress": "^1.3.1",
     "highlight.js": "^9.15.6",
-    "markdown-it": "^8.4.2"
+    "markdown-it": "^8.4.2",
+    "transliteration": "^1.1.11",
+    "markdown-it-anchor": "^5.0.2",
+    "markdown-it-chain": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
