--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "vue-cli-service lint",
     "dev": "vue-cli-service serve",
     "lib": "vue-cli-service build --target lib --name tyelui --dest lib ./packages/index.js",
+    "fix": "eslint --fix --ext .js,.vue src",
     "push": "npm publish",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
@@ -24,17 +25,18 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "element-ui": "^2.4.5",
+    "http-server": "^0.12.1",
     "normalize.css": "^8.0.1",
     "tyelui": "^0.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
   "devDependencies": {
-    "@vue/component-compiler-utils": "^2.6.0",
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-plugin-router": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
+    "@vue/component-compiler-utils": "^2.6.0",
     "@vue/eslint-config-standard": "^5.1.0",
     "babel-eslint": "^10.0.3",
     "babel-plugin-component": "^1.1.1",
@@ -44,11 +46,16 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
+    "highlight.js": "^9.15.6",
+    "markdown-it": "^8.4.2",
+    "markdown-it-anchor": "^5.0.2",
+    "markdown-it-chain": "^1.3.0",
     "markdown-it-container": "^2.0.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "transliteration": "^1.1.11",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-highlightjs": "^1.3.3",
     "vue-loader": "^15.9.0",
@@ -56,12 +63,7 @@
     "vue-markdown": "^2.2.4",
     "vue-markdown-loader": "^2.4.1",
     "vue-template-compiler": "^2.6.11",
-    "vuepress": "^1.3.1",
-    "highlight.js": "^9.15.6",
-    "markdown-it": "^8.4.2",
-    "transliteration": "^1.1.11",
-    "markdown-it-anchor": "^5.0.2",
-    "markdown-it-chain": "^1.3.0"
+    "vuepress": "^1.3.1"
   },
   "eslintConfig": {
     "root": true,
