--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "vue-markdown": "^2.2.4",
     "vue-markdown-loader": "^2.4.1",
     "vue-template-compiler": "^2.6.11",
-    "vuepress": "^1.3.1"
+    "vuepress": "^1.3.1",
+    "faker": "^4.1.0"
   },
   "eslintConfig": {
     "root": true,
