--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,16 @@ language: node_js
 
 env:
   global:
-    - GitHub_REF:  git@github.com:shiliangL/ty-el-ui.git
+    - GitHub_REF:  github.com/shiliangL/ty-el-ui.git
 
 # Install dependence
 install:
   - npm install
 
 # Cache the node_modules folder and don't need to download and install all npm packages every time.
-cache:
-  directories:
-    - node_modules
+# cache:
+#   directories:
+#     - node_modules
     
 # Specify the node version.
 node_js:
