--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shiliangL/ty-el-ui",
-    "page":"https://shiliangl.github.io/ty-el-ui/"
+    "page": "https://shiliangl.github.io/ty-el-ui/"
   },
   "scripts": {
     "build": "vue-cli-service build",
@@ -26,11 +26,12 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "element-ui": "^2.4.5",
-    "http-server": "^0.12.1",
+    "element-ui-verify": "^1.2.6",
     "normalize.css": "^8.0.1",
     "tyelui": "^0.1.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vue-simple-uploader": "^0.7.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
@@ -47,6 +48,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
+    "faker": "^4.1.0",
     "highlight.js": "^9.15.6",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.0.2",
@@ -64,8 +66,7 @@
     "vue-markdown": "^2.2.4",
     "vue-markdown-loader": "^2.4.1",
     "vue-template-compiler": "^2.6.11",
-    "vuepress": "^1.3.1",
-    "faker": "^4.1.0"
+    "vuepress": "^1.3.1"
   },
   "eslintConfig": {
     "root": true,
