--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "docs:build": "vuepress build docs"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.4.5",
     "element-ui-verify": "^1.2.6",
