--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "normalize.css": "^8.0.1",
     "tyelui": "^0.1.2",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.1.5",
     "vue-simple-uploader": "^0.7.4"
   },
