--- a/package.json
+++ b/package.json
@@ -66,8 +66,7 @@
     "vue-markd-loader": "^1.1.0",
     "vue-markdown": "^2.2.4",
     "vue-markdown-loader": "^2.4.1",
-    "vue-template-compiler": "^2.6.11",
-    "vuepress": "^1.3.1"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
