--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "eslint-plugin-vue": "^6.1.2",
     "faker": "^4.1.0",
     "highlight.js": "^9.15.6",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.0.2",
     "markdown-it-chain": "^1.3.0",
