--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyelui",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": false,
   "main": "lib/tyelui.common.js",
   "style": "lib/tyelui.css",
@@ -25,14 +25,23 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "better-scroll": "^1.15.2",
     "core-js": "^3.6.4",
+    "cropperjs": "^1.2.2",
+    "dayjs": "^1.8.23",
+    "debounce": "^1.2.0",
+    "echarts": "^4.7.0",
     "element-ui": "^2.4.5",
     "element-ui-verify": "^1.2.6",
     "normalize.css": "^8.0.1",
+    "resize-detector": "^0.2.1",
+    "v-viewer": "^1.5.1",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.1.5",
-    "vue-simple-uploader": "^0.7.4"
+    "vue-simple-uploader": "^0.7.4",
+    "vue-splitpane": "^1.0.6",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
