--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyelui",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": false,
   "main": "lib/tyelui.common.js",
   "style": "lib/tyelui.css",
@@ -17,13 +17,14 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "dev": "vue-cli-service serve",
-    "lib": "vue-cli-service build --target lib --name tyelui --dest lib ./packages/index.js",
     "fix": "eslint --fix --ext .js,.vue src",
-    "push": "npm publish",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "lib": "vue-cli-service build --target lib --name tyelui --dest lib ./packages/index.js",
+    "push_s": "npm publish --registry http://192.168.0.237:4873",
+    "push_p": "npm publish",
+    "tep": "node template"
   },
   "dependencies": {
+    "js-cookie": "2.2.0",
     "axios": "^0.19.2",
     "better-scroll": "^1.15.2",
     "core-js": "^3.6.4",
@@ -33,6 +34,7 @@
     "echarts": "^4.7.0",
     "element-ui": "^2.4.5",
     "element-ui-verify": "^1.2.6",
+    "lottie-web": "^5.6.7",
     "normalize.css": "^8.0.1",
     "resize-detector": "^0.2.1",
     "v-viewer": "^1.5.1",
