--- a/package.json
+++ b/package.json
@@ -30,11 +30,9 @@
     "core-js": "^3.6.4",
     "cropperjs": "^1.2.2",
     "dayjs": "^1.8.23",
-    "debounce": "^1.2.0",
     "echarts": "^4.7.0",
     "element-ui": "^2.4.5",
     "element-ui-verify": "^1.2.6",
-    "lottie-web": "^5.6.7",
     "normalize.css": "^8.0.1",
     "resize-detector": "^0.2.1",
     "v-viewer": "^1.5.1",
@@ -43,7 +41,9 @@
     "vue-router": "^3.1.5",
     "vue-simple-uploader": "^0.7.4",
     "vue-splitpane": "^1.0.6",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "resize-observer-polyfill": "^1.5.0",
+    "throttle-debounce": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
