--- a/.eslintrc
+++ b/.eslintrc
@@ -3,10 +3,17 @@
     "ga": true,
     "chrome": true
   },
-  "plugins": ["html", "json"],
+  "plugins": [
+    "html",
+    "json"
+  ],
   "extends": "elemefe",
   "rules": {
-    "no-restricted-globals": ["error", "event", "fdescribe"]
+    "no-restricted-globals": [
+      "error",
+      "event",
+      "fdescribe"
+    ]
   },
   "parserOptions": {
     "ecmaVersion": 6,
