--- a/components.json
+++ b/components.json
@@ -83,5 +83,10 @@
   "popconfirm": "./packages/popconfirm/index.js",
 
   "cube-table": "./packages/cube-table/index.js",
-  "search-bar": "./packages/cube-search-bar/index.js"
+  "cube-search-bar": "./packages/cube-search-bar/index.js",
+  "cube-table-list": "./packages/cube-table-list/index.js",
+  
+  "cube-select": "./packages/cube-select/index.js",
+  "cube-select-tree": "./packages/cube-select-tree/index.js",
+  "cube-cascader": "./packages/cube-cascader/index.js"
 }
