--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "topevery-element-ui",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "A Component Library for Vue.js.",
   "main": "lib/topevery-element-ui.common.js",
   "license": "MIT",
@@ -16,6 +16,7 @@
   "scripts": {
     "bootstrap": "yarn || npm i",
     "build:file": "node build/bin/iconInit.js & node build/bin/build-entry.js & node build/bin/i18n.js & node build/bin/version.js",
+    "build:lib": "npm run clean && npm run build:file && npm run lint && webpack --config build/webpack.conf.js && webpack --config build/webpack.common.js && webpack --config build/webpack.component.js && npm run build:utils && npm run build:umd && npm run build:theme",
     "build:theme": "node build/bin/gen-cssfile && gulp build --gulpfile packages/theme-chalk/gulpfile.js && cp-cli packages/theme-chalk/lib lib/theme-chalk",
     "build:utils": "cross-env BABEL_ENV=utils babel src --out-dir lib --ignore src/index.js",
     "build:umd": "node build/bin/build-locale.js",
@@ -31,7 +32,7 @@
     "pub": "npm run bootstrap && sh build/git-release.sh && sh build/release.sh && node build/bin/gen-indices.js && sh build/deploy-faas.sh",
     "test": "npm run lint && npm run build:theme && cross-env CI_ENV=/dev/ BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test:watch": "npm run build:theme && cross-env BABEL_ENV=test karma start test/unit/karma.conf.js",
-    "push": "npm run build:theme && cross-env BABEL_ENV=test karma start test/unit/karma.conf.js"
+    "push": "npm publish"
   },
   "keywords": [
     "eleme",
