--- a/components.json
+++ b/components.json
@@ -89,5 +89,7 @@
   "cube-select": "./packages/cube-select/index.js",
   "cube-select-tree": "./packages/cube-select-tree/index.js",
   "cube-cascader": "./packages/cube-cascader/index.js",
-  "cube-progress": "./packages/cube-progress/index.js"
+  
+  "cube-progress": "./packages/cube-progress/index.js",
+  "cube-chart": "./packages/cube-chart/index.js"
 }
