--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "axios": "^0.19.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.0",
     "deepmerge": "^1.2.0",
+    "echarts": "^4.7.0",
     "js-cookie": "^2.2.0",
     "normalize-wheel": "^1.0.1",
+    "resize-detector": "^0.2.2",
     "resize-observer-polyfill": "^1.5.0",
     "throttle-debounce": "^1.0.1"
   },
