完成按需加载 + 文档编写

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
       "error",
       "event",
       "fdescribe"
-    ]
+    ],
+    "no-debugger": 0
   },
   "parserOptions": {
     "ecmaVersion": 6,
