--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "normalize-wheel": "^1.0.1",
     "resize-detector": "^0.2.2",
     "resize-observer-polyfill": "^1.5.0",
-    "throttle-debounce": "^1.0.1"
+    "throttle-debounce": "^1.0.1",
+    "v-clipboard": "^2.2.3"
   },
   "peerDependencies": {
     "vue": "^2.5.17"
