--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -5,7 +5,7 @@
       "children": [
         {
           "path": "/installation",
-          "name": "安装"
+          "name": "特别说明"
         },
         {
           "path": "/quickstart",
@@ -27,6 +27,10 @@
             {
               "path": "/top-icon",
               "title": "Top-Icon 图标库"
+            },
+            {
+              "path": "/cube-dialog",
+              "title": "cube-dialog 对话框"
             }
           ]
         },
