添加修改菜单+进度条组件完成定义内容插入+文档编写

--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -1,33 +1,25 @@
 {
   "zh-CN": [
     {
-      "name": "开发指南",
-      "children": [
-        {
-          "path": "/installation",
-          "name": "特别说明"
-        },
-        {
-          "path": "/quickstart",
-          "name": "快速上手"
-        },
-        {
-          "path": "/transition",
-          "name": "内置过渡动画"
-        }
-      ]
-    },
-    {
       "name": "组件",
       "groups": [
+        {
+          "groupName": "指南-特别-说明",
+          "list": [
+            {
+              "path": "/installation",
+              "title": "特别说明"
+            },
+            {
+              "path": "/quickstart",
+              "title": "快速上手"
+            }
+          ]
+        },
         {
           "groupName": "其他-新增-模块",
           "new": true,
           "list": [
-            {
-              "path": "/top-icon",
-              "title": "Top-Icon 图标库"
-            },
             {
               "path": "/cube-dialog",
               "title": "cube-dialog 对话框"
@@ -74,6 +66,10 @@
           "groupName": "数据-图形-图表",
           "new": true,
           "list": [
+            {
+              "path": "/top-icon",
+              "title": "Top-Icon 图标库"
+            },
             {
               "path": "/cube-progress",
               "title": "cubeProgress 进度"
