--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "resize-detector": "^0.2.2",
     "resize-observer-polyfill": "^1.5.0",
     "throttle-debounce": "^1.0.1",
-    "v-clipboard": "^2.2.3"
+    "v-clipboard": "^2.2.3",
+    "viewerjs": "^1.5.0"
   },
   "peerDependencies": {
     "vue": "^2.5.17"
