业务列表组件调试+文档开始

--- a/components.json
+++ b/components.json
@@ -95,5 +95,6 @@
   "cube-chart": "./packages/cube-chart/index.js",
 
   "cube-dialog": "./packages/cube-dialog/index.js",
-  "cube-split": "./packages/cube-split/index.js"
+  "cube-split": "./packages/cube-split/index.js",
+  "cube-upload": "./packages/cube-upload/index.js"
 }
