新增标签信息区块分割组件

--- a/components.json
+++ b/components.json
@@ -96,5 +96,7 @@
 
   "cube-dialog": "./packages/cube-dialog/index.js",
   "cube-split": "./packages/cube-split/index.js",
-  "cube-upload": "./packages/cube-upload/index.js"
+  "cube-upload": "./packages/cube-upload/index.js",
+
+  "cube-title": "./packages/cube-title/index.js"
 }
