添加配置项-配置后台数据结构-配置cookieKey

--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -13,6 +13,10 @@
             {
               "path": "/quickstart",
               "title": "快速上手"
+            },
+            {
+              "path": "/updatelog",
+              "title": "更新日志"
             }
           ]
         },
