--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,50 @@
-sudo: false
+
+# Designated language. https://docs.travis-ci.com/user/languages/javascript-with-nodejs/
 language: node_js
-node_js: 10
-addons:
-  chrome: stable
-before_install:
-- export TRAVIS_COMMIT_MSG="[deploy] $(git log --format='%h - %B' --no-merges -n 1)"
-- export TRAVIS_COMMIT_USER="$(git log --no-merges -n 1 --format=%an)"
-- export TRAVIS_COMMIT_EMAIL="$(git log --no-merges -n 1 --format=%ae)"
+
+env:
+  global:
+    - GitHub_REF:  github.com/shiliangL/topevery-element-ui.git
+
+# Install dependence
+install:
+  - npm install
+
+# Cache the node_modules folder and don't need to download and install all npm packages every time.
+# cache:
+#   directories:
+#     - node_modules
+    
+# Specify the node version.
+node_js:
+  - "11"
+  - "10"
+  - "9"
+
+branches:
+  only:
+    - /.*/
+
+stages:
+  - build doc
+
+jobs:
+  include:
+    - stage: build doc
+      script:
+        - npm run build:docs
+        - git add .
+        - git commit -m "code update"
+        - git push --force --quiet "https://${CI_TOKEN}@${GitHub_REF}" master:master
+
 after_success:
-- sh build/deploy-ci.sh
-- cat ./test/unit/coverage/lcov.info | ./node_modules/.bin/coveralls
+  - bash <(curl -s https://codecov.io/bash)  
+      
+# Configure to send notifications when the build fails. https://docs.travis-ci.com/user/notifications
+
+notifications:
+  webhooks:
+    urls:
+      - https://www.travisbuddy.com/
+    on_success: never # Successful build does not send mail.
+    on_failure: always # Build failure always sends a message.
