--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: node_js
 
 env:
   global:
-    - GitHub_REF:  github.com/shiliangL/topevery-element-ui.git
+    - GitHub_REF:  github.com/shiliangL/ty-el-ui.git
 
 # Install dependence
 install:
