新增业务级联二级组件

--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -82,6 +82,10 @@
               "title": "CubeSelectTree 树形选择"
             },
             {
+              "path": "/cube-select-cascade",
+              "title": "CubeSelectCascade 数据级联"
+            },
+            {
               "path": "/cube-cascader",
               "title": "CubeCascader 级联选择"
             }
