--- a/components.json
+++ b/components.json
@@ -95,5 +95,6 @@
   "cube-split": "./packages/cube-split/index.js",
   "cube-upload": "./packages/cube-upload/index.js",
   "cube-title": "./packages/cube-title/index.js",
-  "cube-scroll-to": "./packages/cube-scroll-to/index.js"
+  "cube-scroll-to": "./packages/cube-scroll-to/index.js",
+  "cube-select-cascade": "./packages/cube-select-cascade/index.js"
 }
