--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,15 @@
     ],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx"],
+  "plugins": ["transform-vue-jsx",
+    [
+      "component",
+      {
+        "libraryName": "topevery-element-ui",
+        "styleLibraryName": "theme-chalk"
+      }
+    ]
+  ],
   "env": {
     "utils": {
       "presets": [
@@ -25,7 +33,7 @@
               "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
             }
           }
-        ],
+        ]
       ],
       "plugins": [
         ["module-resolver", {
